# neuro_pictures

./: CMakeLists.txt  README.md  docum  idar_dox  learner.cpp  network.txt  vanya_dox  vera_dox
GPU_stuff/: detect_device.cpp  matrix_mul.cu
UI/: Header1.h  drawer.h  interface.cpp
doxygen/html/: annotated.html  class_n_n-members.html  class_n_n.html  classes.html  classmatrix-members.html  classmatrix.html  classperceptron_layer-members.html  classperceptron_layer.html  detect__device_8cpp.html  detect__device_8cpp_source.html  dir_304cc21f2f2363348d92f15d6aec0cb5.html  dir_a0ba40bcf0469d68faf18dde0c720426.html  (+15 more)
lib/: Qt5AccessibilitySupport.lib  Qt5AccessibilitySupport.prl  Qt5Concurrent.lib  Qt5Concurrent.prl  Qt5Core.lib  Qt5Core.prl  Qt5DBus.lib  Qt5DBus.prl  Qt5DeviceDiscoverySupport.lib  Qt5DeviceDiscoverySupport.prl  Qt5EdidSupport.lib  Qt5EdidSupport.prl  Qt5EventDispatcherSupport.lib  Qt5EventDispatcherSupport.prl  Qt5FbSupport.lib  Qt5FbSupport.prl  Qt5FontDatabaseSupport.prl  Qt5Gui.prl  Qt5Network.lib  Qt5Network.prl  Qt5OpenGL.lib  Qt5OpenGL.prl  Qt5OpenGLExtensions.lib  Qt5OpenGLExtensions.prl  Qt5PlatformCompositorSupport.lib  Qt5PlatformCompositorSupport.prl  Qt5PrintSupport.lib  Qt5PrintSupport.prl  Qt5Sql.lib  Qt5Sql.prl  Qt5Test.lib  Qt5Test.prl  Qt5ThemeSupport.lib  Qt5ThemeSupport.prl  Qt5Widgets.lib  Qt5Widgets.prl  Qt5WindowsUIAutomationSupport.lib  Qt5WindowsUIAutomationSupport.prl  Qt5Xml.lib  Qt5Xml.prl  (+22 more)
nn/: network.cpp  perceptron.cpp  utility.cpp
tests/: tests.cpp  tests_idar.cpp  tests_vanya.cpp  tests_vera.cpp  vanya_tests.cpp
(+112 files in other folders)
